# rules_nixpkgs

./: BUILD.bazel  defs.bzl
nixpkgs/: BUILD.deps  nixpkgs.bzl
nixpkgs/private/: actions.bzl  aspects.bzl  providers.bzl  rules.bzl
nixpkgs/toolchains/: nix.bzl
private/: actions.bzl  aspects.bzl  pip_repo.bzl  providers.bzl  rules.bzl
tests/pip/: BUILD.bazel  WORKSPACE  default.nix  pyproject.toml  test_numpy.py  test_requests.py
toolchains/: nix.bzl
