[tool.poetry]
name = "test_package"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
requests = "^2.26.0"
gunicorn = "^20.1.0"
Flask = "^2.0.1"
numpy = "<1.20.0" # 1.21.2 is broken

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
